Signup paged added

--- a/qdarkstyle/style.qrc
+++ b/qdarkstyle/style.qrc
@@ -227,5 +227,6 @@
         <file>../images/search_product.png</file>
         <file>../images/buy_product.png</file>
         <file>../images/exit.png</file>
+        <file>../images/background.jpg</file>
     </qresource>
 </RCC>
