--- a/profiledialog.ui
+++ b/profiledialog.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>620</width>
-    <height>446</height>
+    <height>310</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>320</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -107,21 +113,6 @@
          </property>
         </widget>
        </item>
-       <item>
-        <widget class="QLabel" name="description_lbl">
-         <property name="font">
-          <font>
-           <pointsize>12</pointsize>
-          </font>
-         </property>
-         <property name="frameShape">
-          <enum>QFrame::Panel</enum>
-         </property>
-         <property name="text">
-          <string>Description:</string>
-         </property>
-        </widget>
-       </item>
       </layout>
      </item>
      <item>
@@ -139,7 +130,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="price_lineEdit">
+        <widget class="QLineEdit" name="username_lineEdit">
          <property name="enabled">
           <bool>false</bool>
          </property>
@@ -151,19 +142,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="count_lineEdit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>14</pointsize>
-          </font>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLineEdit" name="description_lineEdit">
+        <widget class="QLineEdit" name="password_lineEdit">
          <property name="enabled">
           <bool>false</bool>
          </property>
