--- a/admin.ui
+++ b/admin.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1133</width>
+    <width>1150</width>
     <height>685</height>
    </rect>
   </property>
@@ -200,7 +200,19 @@
     </item>
    </layout>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>50</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+  </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="enabled">
     <bool>true</bool>
@@ -208,7 +220,7 @@
    <property name="minimumSize">
     <size>
      <width>0</width>
-     <height>100</height>
+     <height>0</height>
     </size>
    </property>
    <property name="font">
