--- a/admin.ui
+++ b/admin.ui
@@ -131,7 +131,7 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="add_btn">
           <property name="font">
            <font>
             <pointsize>18</pointsize>
@@ -153,7 +153,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="delete_btn">
           <property name="font">
            <font>
             <pointsize>18</pointsize>
