--- a/buyer.ui
+++ b/buyer.ui
@@ -167,7 +167,7 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QPushButton" name="pushButton_5">
+         <widget class="QPushButton" name="buy_btn">
           <property name="font">
            <font>
             <pointsize>18</pointsize>
