--- a/seller.ui
+++ b/seller.ui
@@ -167,7 +167,7 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_5">
         <item>
-         <widget class="QPushButton" name="pushButton_5">
+         <widget class="QPushButton" name="add_btn">
           <property name="font">
            <font>
             <pointsize>18</pointsize>
